# mva-info-et-complexite

./: .gitignore  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
data/: bad_labels.json  bad_tokens.json
src/challenge/: __init__.py  __main__.py  cli.py  denoise.py  download.py  io.py  train.py
tests/: test_import.py
