[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "challenge"
readme = "README.md"
authors = [
    {name = "Gabriel Belouze", email = "gabriel.belouze@ens.psl.eu"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
# we need python 3.7 to have dict remember insertion order
requires-python = ">=3.7"
license = {"file" = "LICENSE"}
dynamic = ["version", "description"]
dependencies = [
    "fasttext",
    "pandas",
    "rich",
    "click",
    "requests",
    "transformers",
    "torch",
    "thefuzz",
    "python-Levenshtein",
    "langid"
]

[tool.flit.module]
name = "challenge"

[project.urls]
source = "https://github.com/gbelouze/challenge"
tracker = "https://github.com/gbelouze/challenge/issues"

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pre-commit",
    "toml"
]

[project.scripts]
kili = "challenge.cli:main "

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
